tests/ui/did_you_mean/unresolved-imports-dont-suggest-unresolved-names.rs
// Regression test for issue #38054.

use Foo; //~ ERROR unresolved

use Foo1; //~ ERROR unresolved

fn main() {}
